# solar-model

./: README.md  image_collection_functions.ipynb  solar_model_nb.ipynb  solar_model_notebook.ipynb
poetry-solar/: README.md  pyproject.toml
poetry-solar/.ipynb_checkpoints/: solar_model_notebook-checkpoint.ipynb
poetry-solar/tests/: test_poetry_solar.py
