[tool.poetry]
name = "poetry-solar"
version = "0.1.0"
description = ""
authors = ["ericphillips99 <60167587+ericphillips99@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "2.2.0rc4"
numpy = "1.18.4"
pandas = "1.0.3"
scikit-learn = "0.22.2.post1"
matplotlib = "3.2.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
